assets/css/main.scss
--- 
# do not remove 
--- 

@import 'normalize';
@import 'code_style';
@import 'flexible';


/* 0. Variables
   ========================================================================== */

@mixin lightMode {
    --bg_color: #eee;
    --header_bg: #fafafa;
    --content_bg: #fff;
    --archive_font: #000;
    --archive_title: #46a891;
    --archive_title_hover: #87CDBD;
    --name_font: #FFAA00;
    --job_font: #003845;
    --nav_font: #8d7edc;
    --nav_font_hover: #D4CEF2;
    --shadow_color: rgba(160, 160, 160, 0.05);
    --post_title: #003845;
    --post_date: #003845;
    --post_text: #4c4c4c;
    --post_h3: #4c4c4c;
    --post_link: #46a891;
    --post_link_hover: #87CDBD;
    --inlinecode_text: #FFAA00;
    --blockquote: #333333;
    --footer_font: #858585;
    --footer_font_a: #000;
    --border_radius: 15px;

}

@mixin darkMode {
    --bg_color: #1C1C1E;
    --header_bg: #24292E;
    --content_bg: #2F3437;
    --archive_font: #CACCCE;
    --archive_title: #46a891;
    --archive_title_hover: #87CDBD;
    --name_font: #FFAA00;
    --job_font: #CACCCE;
    --nav_font: #8d7edc;
    --nav_font_hover: #D4CEF2;
    --shadow_color: rgba(0, 0, 0, 1);
    --post_title: #46a891;
    --post_date: #e9ead7;
    --post_text: #CACCCE;
    --post_h3: #fff;
    --post_link: #8d7edc;
    --post_link_hover: #D4CEF2;
    --inlinecode_text: #FFAA00;
    --blockquote: #CACCCE;
    --footer_font_a: #d1d1d1;
    --border_radius: 1px;
}


/* 1. General
   ========================================================================== */

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    margin: 0;
    padding: 0;
    height: 100%;

    @include breakpoint(medium) {
        overflow: hidden;
    }
}

html,
html.light {
    @include lightMode
}

html.dark {
    @include darkMode
}

@media (prefers_color: light),
(prefers_color: no-preference) {
    html {
        @include lightMode
    }

    html.dark {
        @include darkMode
    }
}

@media (prefers_color: dark) {
    html {
        @include darkMode
    }

    html.light {
        @include lightMode
    }
}

body {
    height: 100%;
    font-weight: normal;
    font-style: normal;
    font-family: -apple-system, BlinkMacSystemFont, 'Titillium Web', "Segoe UI", Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    margin: 0;
    padding: 0;
    background-color: var(--bg_color);
    transition: background-color 0.5s ease;
    background-size: 100%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
    
    @include breakpoint(medium) {
        overflow: auto;
        zoom: 1;
    }
}

a {
    text-decoration: none;
}

img {
    display: block;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
}

.content {
    margin: 1.4em auto;
    z-index: 0;
    background: var(--content_bg);
    position: relative;
    max-width: 92%;
    min-height: 85%;
    border-radius: 15px;
    box-shadow: 0 0 2px 2px var(--shadow_color);
    padding-bottom: 2rem;

    @include breakpoint(medium) {
        margin-left: auto;
        margin-right: auto;
        max-width: 960px;
        padding-top: 2.5rem;
    }

    @include mobile-only {
        padding-top: 16rem;
        min-height: 100%;
    }

}

.main {
    padding: 0.5rem;

    @include breakpoint(medium) {
        margin-left: 22rem;
    }
}

.aboutme {
    @include breakpoint(medium) {
        max-width: 30rem;
        margin-top: 5.5rem;
    }

    @include mobile-only {
        margin-top: 2rem;
        margin-left: 1rem;
        margin-right: 1rem;
    }

    img {
        width: 70% !important;
        float: left;
    }
}

::-webkit-scrollbar {
    width: 8px;
    height: 6px;
}

::-webkit-scrollbar-track {
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.5);
    -webkit-border-radius: 0px;
    border-radius: 0px;
}

::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(0, 0, 0, 0.2);
}

.fourzerofour {
    text-align: center;
    font-size: 1.3rem;
    margin-top: 10rem;
}


/* 2. Archive
   ========================================================================== */

.archive {
    color: var(--archive_font);

    ul {
        list-style: none;
        margin: 0;
        padding: 0;

        li {
            margin-bottom: 0.6rem;
        }
    }

    & a {
        text-decoration: none;
        color: var(--archive_title);

        &:hover,
        &:focus {
            color: var(--archive_title_hover);
        }
    }

    @include breakpoint(medium) {
        max-width: 30rem;
        margin-top: 5rem;
    }

    @include mobile-only {
        margin-top: 2rem;
        margin-left: 1.2rem;
        margin-right: 1.2rem;
    }
}

.archive_date {
    text-transform: uppercase;

    @include breakpoint(medium) {
        float: right;
    }
}

.archive_title {
    
    word-wrap: normal;
    @include breakpoint(medium) {
        max-width: 80%;
    }
}

.archive_type {
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 1rem;
}

.archive_year {
    font-size: 1.2rem;
    margin-top: 1.4rem;
    margin-bottom: 0.6rem;
}


/* 3. Header
   ========================================================================== */

.header {
    background-color: var(--header_bg);
    z-index: 1;
    position: absolute;
    top: 0;
    width: 100%;
    border-radius: var(--border_radius);
    box-shadow: 0 0 2px 2px var(--shadow_color);

    @include mobile-only {
        height: 9rem;
    }

    @include breakpoint(medium) {
        width: 18rem;
        height: 100%;
        min-height: 100%;
    }

}

.header_content {
    position: absolute;
    text-align: center;

    @include breakpoint(medium) {
        margin-top: 8rem;
        width: 100%;
    }

    @include mobile-only {
        margin-top: 3rem;
        width: 100%;
    }
}
/* ... */

